@@ -1,8 +1,7 @@
-// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.java.psi;
 
 import com.intellij.openapi.application.ex.PathManagerEx;
-import com.intellij.openapi.roots.LanguageLevelProjectExtension;
 import com.intellij.openapi.vfs.VirtualFileFilter;
 import com.intellij.pom.java.LanguageLevel;
 import com.intellij.psi.*;
@@ -20,7 +19,6 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashSet;
 import java.util.Set;
 
 @HeavyPlatformTestCase.WrapInCommand
@@ -29,7 +27,7 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
   protected void setUp() throws Exception {
     super.setUp();
 
-    LanguageLevelProjectExtension.getInstance(myProject).setLanguageLevel(LanguageLevel.JDK_1_5);
+    IdeaTestUtil.setProjectLanguageLevel(myProject, LanguageLevel.JDK_1_5);
     String root = PathManagerEx.getTestDataPath() + "/psi/repositoryUse/src15";
     PsiTestUtil.removeAllRoots(myModule, IdeaTestUtil.getMockJdk17());
     createTestProjectStructure( root);
@@ -38,7 +36,7 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
   @Override
   protected void tearDown() throws Exception {
     try {
-      LanguageLevelProjectExtension.getInstance(myProject).setLanguageLevel(LanguageLevel.JDK_1_5);
+      IdeaTestUtil.setProjectLanguageLevel(myProject, LanguageLevel.JDK_1_5);
     }
     catch (Throwable e) {
       addSuppressedException(e);
@@ -48,11 +46,10 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
     }
   }
 
-
   public void testStaticImports() {
     setupLoadingFilter();
-    final PsiClass aClass = findClass("staticImports.StaticImports");
-    final PsiJavaFile javaFile = (PsiJavaFile)aClass.getContainingFile();
+    PsiClass aClass = findClass("staticImports.StaticImports");
+    PsiJavaFile javaFile = (PsiJavaFile)aClass.getContainingFile();
     doTestStaticImports(javaFile, false);
     tearDownLoadingFilter();
     doTestStaticImports(javaFile, true);
@@ -61,7 +58,7 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
   public void testDeprecatedAnnotation() {
     setupLoadingFilter();
 
-    final PsiClass aClass = findClass("annotations.DeprecatedAnnotation");
+    PsiClass aClass = findClass("annotations.DeprecatedAnnotation");
     assertTrue(aClass.isDeprecated());
     PsiMethod method = aClass.getMethods()[0];
     assertTrue(method.isDeprecated());
@@ -73,24 +70,24 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
   public void testEnumImplements() {
     setupLoadingFilter();
 
-    final PsiClass aClass = findClass("enumImplements.MyEnum");
-    final PsiClassType[] implementsListTypes = aClass.getImplementsListTypes();
+    PsiClass aClass = findClass("enumImplements.MyEnum");
+    PsiClassType[] implementsListTypes = aClass.getImplementsListTypes();
     assertEquals(1, implementsListTypes.length);
 
-    final PsiClass baseInterface = implementsListTypes[0].resolve();
+    PsiClass baseInterface = implementsListTypes[0].resolve();
     assertNotNull(baseInterface);
     assertEquals("I", baseInterface.getName());
     tearDownLoadingFilter();
   }
 
-  private static void doTestStaticImports(final PsiJavaFile javaFile, boolean okToLoadTree) {
-    final PsiImportList importList = javaFile.getImportList();
+  private static void doTestStaticImports(PsiJavaFile javaFile, boolean okToLoadTree) {
+    PsiImportList importList = javaFile.getImportList();
     assertNotNull(importList);
-    final PsiImportStatementBase[] allImportStatements = importList.getAllImportStatements();
+    PsiImportStatementBase[] allImportStatements = importList.getAllImportStatements();
     assertEquals(6, allImportStatements.length);
-    final PsiImportStatement[] importStatements = importList.getImportStatements();
+    PsiImportStatement[] importStatements = importList.getImportStatements();
     assertEquals(2, importStatements.length);
-    final PsiImportStaticStatement[] importStaticStatements = importList.getImportStaticStatements();
+    PsiImportStaticStatement[] importStaticStatements = importList.getImportStaticStatements();
     assertEquals(4, importStaticStatements.length);
     assertFalse(importStatements[0].isOnDemand());
     assertTrue(importStaticStatements[0].isOnDemand());
@@ -102,14 +99,14 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
     assertEquals("sort", importStaticStatements[2].getReferenceName());
     assertEquals("sort", importStaticStatements[3].getReferenceName());
 
-    final PsiImportStaticStatement classReference1 = importStaticStatements[1];
-    final PsiClass element1 = classReference1.resolveTargetClass();
+    PsiImportStaticStatement classReference1 = importStaticStatements[1];
+    PsiClass element1 = classReference1.resolveTargetClass();
     assertNotNull(element1);
 
     assertEquals("java.util.Arrays", element1.getQualifiedName());
 
-    final PsiImportStaticStatement classReference3 = importStaticStatements[3];
-    final PsiClass element3 = classReference3.resolveTargetClass();
+    PsiImportStaticStatement classReference3 = importStaticStatements[3];
+    PsiClass element3 = classReference3.resolveTargetClass();
     assertNotNull(element3);
     assertEquals("java.util.Arrays", element3.getQualifiedName());
 
@@ -122,28 +119,28 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
   }
 
   private static String getText(PsiImportStaticStatement statement) {
-    final PsiJavaCodeReferenceElement reference = statement.getImportReference();
+    PsiJavaCodeReferenceElement reference = statement.getImportReference();
     return reference != null ? reference.getText() : "(null ref)";
   }
 
   public void testEnum() {
     setupLoadingFilter();
-    final PsiClass enumClass = findClass("enums.OurEnum");
+    PsiClass enumClass = findClass("enums.OurEnum");
     assertTrue(enumClass.isEnum());
-    final PsiClass superClass = enumClass.getSuperClass();
+    PsiClass superClass = enumClass.getSuperClass();
     assertNotNull(superClass);
     assertEquals("java.lang.Enum", superClass.getQualifiedName());
     assertTrue(enumClass.isInheritor(superClass, false));
-    final PsiClassType[] superTypes = enumClass.getSuperTypes();
+    PsiClassType[] superTypes = enumClass.getSuperTypes();
     assertEquals(1, superTypes.length);
     assertEquals("java.lang.Enum<enums.OurEnum>", superTypes[0].getCanonicalText());
-    final PsiClass[] supers = enumClass.getSupers();
+    PsiClass[] supers = enumClass.getSupers();
     assertEquals(1, supers.length);
     assertEquals("java.lang.Enum", supers[0].getQualifiedName());
-    final PsiClassType[] extendsListTypes = enumClass.getExtendsListTypes();
+    PsiClassType[] extendsListTypes = enumClass.getExtendsListTypes();
     assertEquals(1, extendsListTypes.length);
     assertEquals("java.lang.Enum<enums.OurEnum>", extendsListTypes[0].getCanonicalText());
-    final PsiSubstitutor superClassSubstitutor = TypeConversionUtil.getSuperClassSubstitutor(superClass, enumClass, PsiSubstitutor.EMPTY);
+    PsiSubstitutor superClassSubstitutor = TypeConversionUtil.getSuperClassSubstitutor(superClass, enumClass, PsiSubstitutor.EMPTY);
     assertEquals("java.lang.Enum<enums.OurEnum>", myJavaFacade.getElementFactory().createType(superClass, superClassSubstitutor).getCanonicalText());
     tearDownLoadingFilter();
   }
@@ -159,7 +156,7 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
 
   public void testEnumWithInitializedConstants() {
     setupLoadingFilter();
-    final GlobalSearchScope moduleScope = GlobalSearchScope.moduleScope(myModule);
+    GlobalSearchScope moduleScope = GlobalSearchScope.moduleScope(myModule);
 
     PsiClass enumClass = findClass("enums.OurEnumWithInitializedConstants");
     assertTrue(enumClass.isEnum());
@@ -171,23 +168,23 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
     PsiAnonymousClass initializingClass0 = ((PsiEnumConstant)fields[0]).getInitializingClass();
     assertNotNull(initializingClass0);
     PsiClass baseClass0 = initializingClass0.getBaseClassType().resolve();
-    assertTrue(baseClass0 == enumClass);
+    assertSame(baseClass0, enumClass);
 
     PsiAnonymousClass initializingClass1 = ((PsiEnumConstant)fields[1]).getInitializingClass();
     assertNotNull(initializingClass1);
     PsiClass baseClass1 = initializingClass1.getBaseClassType().resolve();
-    assertTrue(baseClass1 == enumClass);
+    assertSame(baseClass1, enumClass);
 
     PsiAnonymousClass initializingClass2 = ((PsiEnumConstant)fields[1]).getInitializingClass();
     assertNotNull(initializingClass2);
     PsiClass baseClass2 = initializingClass2.getBaseClassType().resolve();
-    assertTrue(baseClass2 == enumClass);
+    assertSame(baseClass2, enumClass);
 
     assertTrue(initializingClass0.isInheritor(enumClass, false));
     assertTrue(initializingClass1.isInheritor(enumClass, false));
     assertTrue(initializingClass2.isInheritor(enumClass, false));
 
-    final PsiClass[] enumInheritors = ClassInheritorsSearch.search(enumClass, moduleScope, false).toArray(PsiClass.EMPTY_ARRAY);
+    PsiClass[] enumInheritors = ClassInheritorsSearch.search(enumClass, moduleScope, false).toArray(PsiClass.EMPTY_ARRAY);
     assertEquals(3, enumInheritors.length);
     assertTrue(Arrays.asList(enumInheritors).contains(initializingClass0));
     assertTrue(Arrays.asList(enumInheritors).contains(initializingClass1));
@@ -198,24 +195,24 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
     assertEquals(1, methods1.length);
     assertEquals("foo", methods1[0].getName());
 
-    final PsiClass baseInterfaceClass = findClass("enums.OurBaseInterface");
+    PsiClass baseInterfaceClass = findClass("enums.OurBaseInterface");
 
-    final PsiClass[] inheritors = ClassInheritorsSearch.search(baseInterfaceClass, moduleScope, false).toArray(PsiClass.EMPTY_ARRAY);
+    PsiClass[] inheritors = ClassInheritorsSearch.search(baseInterfaceClass, moduleScope, false).toArray(PsiClass.EMPTY_ARRAY);
     assertEquals(1, inheritors.length);
     assertTrue(inheritors[0] instanceof PsiAnonymousClass);
 
     tearDownLoadingFilter();
 
     assertTrue(inheritors[0].getParent().getParent() instanceof PsiExpressionList);
-    assertTrue(inheritors[0].getParent().getParent().getParent() == fields[2]);
+    assertSame(inheritors[0].getParent().getParent().getParent(), fields[2]);
 
-    final PsiExpressionList argumentList = ((PsiEnumConstant)fields[2]).getArgumentList();
+    PsiExpressionList argumentList = ((PsiEnumConstant)fields[2]).getArgumentList();
     assertNotNull(argumentList);
-    final PsiExpression[] expressions2 = argumentList.getExpressions();
+    PsiExpression[] expressions2 = argumentList.getExpressions();
     assertEquals(1, expressions2.length);
     assertTrue(expressions2[0] instanceof PsiNewExpression);
-    final PsiAnonymousClass anonymousClass2 = ((PsiNewExpression)expressions2[0]).getAnonymousClass();
-    assertTrue(anonymousClass2 != null);
+    PsiAnonymousClass anonymousClass2 = ((PsiNewExpression)expressions2[0]).getAnonymousClass();
+    assertNotNull(anonymousClass2);
     assertTrue(anonymousClass2.isInheritor(baseInterfaceClass, false));
   }
 
@@ -271,12 +268,11 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
         visitExpression(expression);
       }
     });
-    enumClass.getText();
   }
 
   public void testAnnotationType() {
     setupLoadingFilter();
-    final PsiClass annotationTypeClass = findClass("annotations.AnnotationType");
+    PsiClass annotationTypeClass = findClass("annotations.AnnotationType");
     assertTrue(annotationTypeClass.isAnnotationType());
     tearDownLoadingFilter();
   }
@@ -284,18 +280,18 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
   public void testAnnotationIndex() {
     PsiManagerEx.getInstanceEx(getProject()).setAssertOnFileLoadingFilter(file -> !"package-info.java".equals(file.getName()), getTestRootDisposable());
 
-    final PsiClass annotationTypeClass = findClass("annotations.AnnotationType");
+    PsiClass annotationTypeClass = findClass("annotations.AnnotationType");
     assertTrue(annotationTypeClass.isAnnotationType());
 
-    final Collection<PsiMember> all = AnnotatedMembersSearch.search(annotationTypeClass, GlobalSearchScope.moduleScope(myModule)).findAll();
+    Collection<PsiMember> all = AnnotatedMembersSearch.search(annotationTypeClass, GlobalSearchScope.moduleScope(myModule)).findAll();
 
     assertEquals(2, all.size());
-    Set<String> correctNames = new HashSet<>(Arrays.asList("AnnotatedClass", "correctMethod"));
+    Set<String> correctNames = Set.of("AnnotatedClass", "correctMethod");
     for (PsiMember member : all) {
       assertTrue(correctNames.contains(member.getName()));
     }
 
-    final Collection<PsiPackage> packages =
+    Collection<PsiPackage> packages =
       AnnotatedPackagesSearch.search(annotationTypeClass, GlobalSearchScope.moduleScope(myModule)).findAll();
     assertEquals(1, packages.size());
     assertEquals("annotated", packages.iterator().next().getQualifiedName());
@@ -311,8 +307,7 @@ public class Src15RepositoryUseTest extends JavaPsiTestCase {
     PsiManagerEx.getInstanceEx(getProject()).setAssertOnFileLoadingFilter(VirtualFileFilter.NONE, getTestRootDisposable());
   }
 
-  @NotNull
-  private PsiClass findClass(final String name) {
+  private PsiClass findClass(String name) {
     PsiClass aClass = myJavaFacade.findClass(name, GlobalSearchScope.moduleScope(myModule));
     assertNotNull(name, aClass);
     return aClass;
